crates/ty_python_semantic/resources/mdtest/snapshots/for.md_-_For_loops_-_Possibly_invalid_`__…_(6388761c90a0555c).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: for.md - For loops - Possibly invalid `__iter__` methods
mdtest path: crates/ty_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class Iterator:
 2 |     def __next__(self) -> int:
 3 |         return 42
 4 | 
 5 | def _(flag: bool):
 6 |     class Iterable1:
 7 |         if flag:
 8 |             def __iter__(self) -> Iterator:
 9 |                 return Iterator()
10 | 
11 |         else:
12 |             def __iter__(self, invalid_extra_arg) -> Iterator:
13 |                 return Iterator()
14 | 
15 |     # error: [not-iterable]
16 |     for x in Iterable1():
17 |         reveal_type(x)  # revealed: int
18 | 
19 |     class Iterable2:
20 |         if flag:
21 |             def __iter__(self) -> Iterator:
22 |                 return Iterator()
23 | 
24 |         else:
25 |             __iter__: None = None
26 | 
27 |     # error: [not-iterable]
28 |     for x in Iterable2():
29 |         # TODO: `int` would probably be better here:
30 |         reveal_type(x)  # revealed: int | Unknown
```

# Diagnostics

```
error[not-iterable]: Object of type `Iterable1` may not be iterable
  --> src/mdtest_snippet.py:16:14
   |
15 |     # error: [not-iterable]
16 |     for x in Iterable1():
   |              ^^^^^^^^^^^
17 |         reveal_type(x)  # revealed: int
   |
info: Its `__iter__` method may have an invalid signature
info: Type of `__iter__` is `(bound method Iterable1.__iter__() -> Iterator) | (bound method Iterable1.__iter__(invalid_extra_arg) -> Iterator)`
info: Expected signature for `__iter__` is `def __iter__(self): ...`
info: rule `not-iterable` is enabled by default

```

```
error[not-iterable]: Object of type `Iterable2` may not be iterable
  --> src/mdtest_snippet.py:28:14
   |
27 |     # error: [not-iterable]
28 |     for x in Iterable2():
   |              ^^^^^^^^^^^
29 |         # TODO: `int` would probably be better here:
30 |         reveal_type(x)  # revealed: int | Unknown
   |
info: Its `__iter__` attribute (with type `(bound method Iterable2.__iter__() -> Iterator) | None`) may not be callable
info: rule `not-iterable` is enabled by default

```
